# wirecov

./: .gitignore  Dockerfile  README.md  pyproject.toml
docker/: entrypoint.sh  extract_dates.py
docs/example-report/: dissector-diff-init-report.html
docs/images/: diff_report_mock.html  standard_report_mock.html
tests/: conftest.py  test_coverage.py  test_dissectors.py  test_optimize.py  test_versions.py
wirecov/: __init__.py  __main__.py  attribution.py  badges.py  cli.py  config.py  coverage.py  diff.py  dissectors.py  docker.py  exceptions.py  matrix.py  optimize.py  protocols.py  runner.py  versions.py
wirecov/reports/: __init__.py  csv_report.py  html_report.py  json_report.py  terminal.py
wirecov/templates/: report.html
