[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "wirecov"
version = "0.1.0"
description = "Wireshark/tshark code coverage analysis tool"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "click>=8.0",
    "rich>=12.0",
    "jinja2>=3.0",
    "requests>=2.28",
    "InquirerPy>=0.3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
]

[project.scripts]
wirecov = "wirecov.cli:main"

[tool.setuptools.packages.find]
include = ["wirecov*"]

[tool.pytest.ini_options]
markers = [
    "docker: tests requiring Docker (deselect with '-m \"not docker\"')",
]
